// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SideBarItem 1`] = `
<MenuItem
  className="sidebar-item "
>
  <div
    className="sidebar-item-align-container"
  >
    <span>
      <Icon
        as="i"
        size="large"
      />
    </span>
    <span />
  </div>
</MenuItem>
`;

exports[`renders SideBarItem with highlight 1`] = `
<MenuItem
  className="sidebar-item highlight-item"
>
  <div
    className="sidebar-item-align-container"
  >
    <span>
      <Icon
        as="i"
        size="large"
      />
    </span>
    <span />
  </div>
</MenuItem>
`;

exports[`renders SideBarItem with highlight icon label 1`] = `
<MenuItem
  className="sidebar-item highlight-item"
>
  <div
    className="sidebar-item-align-container"
  >
    <span>
      <Icon
        as="i"
        size="large"
      />
    </span>
    <span>
      Trending
    </span>
  </div>
</MenuItem>
`;

exports[`renders SideBarItem with icon 1`] = `
<MenuItem
  className="sidebar-item "
>
  <div
    className="sidebar-item-align-container"
  >
    <span>
      <Icon
        as="i"
        size="large"
      />
    </span>
    <span />
  </div>
</MenuItem>
`;

exports[`renders SideBarItem with label 1`] = `
<MenuItem
  className="sidebar-item "
>
  <div
    className="sidebar-item-align-container"
  >
    <span>
      <Icon
        as="i"
        size="large"
      />
    </span>
    <span>
      Trending
    </span>
  </div>
</MenuItem>
`;
